@@ -15,6 +15,7 @@ HelpMePlay | 1.0.2
 		- Added automation for the Zandalar War Campaign (Alliance).
 		- Automated the confirmation for Khadgar in the Blasted Lands.
 		- Automated the selection of the Highpass Sparring Ring (Alliance) in Gorgrond.
+		- Automated the collection of gold from the player's mailbox. Note, this ONLY applies to gold.
 	Changes:
 		- Only players below level 50 are now considered eligible for War Mode automation.
 		- Generalized the dialog for the Broken Shore skip. Now both factions will skip onward to new Dalaran.
